--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<a href = "index.html">Home</a>
+		<a href = "index.html">About us</a>
+		<a href = "index.html">Contact us</a>
+	</nav>
+
+	<nav>
+		<h3>3 random audios</h3>
+		<a href = "http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">1st random audio</a>
+		<a href = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">2nd random audio</a>
+		<a href= "http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3.">3rd random audio</a>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
