--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<a href = "index.html">Home</a>
-		<a href = "index.html">About us</a>
+		<a href = "index.html">Home</a> |
+		<a href = "index.html">About us</a> |
 		<a href = "index.html">Contact us</a>
 
 		<h1>3 random audios</h1>
