--- a/main.html
+++ b/main.html
@@ -14,15 +14,9 @@
 		<a href = "index.html">Contact us</a>
 
 		<h1>3 random audios</h1>
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
-		</audio>
-		<audio controls>
-			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-		</audio>
-		<audio controls>
-			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-		</audio>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		<audio src="http://codeskulptor-demos.commodatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
 	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
