--- a/main.html
+++ b/main.html
@@ -14,9 +14,15 @@
 		<a href = "index.html">Contact us</a>
 
 		<h1>3 random audios</h1>
+		<nav>
 		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+		</nav>
+		<nav>
 		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		</nav>
+		<nav>
 		<audio src="http://codeskulptor-demos.commodatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+		</nav>
 	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
