--- a/main.html
+++ b/main.html
@@ -16,13 +16,9 @@
 
 		<h1>3 random audios</h1>
 		<nav>
-		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
-		</nav>
-		<nav>
-		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
-		</nav>
-		<nav>
-		<audio src="http://codeskulptor-demos.commodatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+				<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+				<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
 		</nav>
     <script type="text/javascript" src="./script.js">
 </script>
