--- a/main.html
+++ b/main.html
@@ -9,10 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<a href = "index.html">Home</a> |
-		<a href = "index.html">About us</a> |
-		<a href = "index.html">Contact us</a>
-	</nav>
+    <ul>
+       <li><a href="index.html">Home</a></li>
+       <li><a href="/about/">About</a></li>
+       <li><a href="/blog/">Blog</a></li>
+    </ul>
+    </nav>
 
 		<h1>3 random audios</h1>
 		<nav>
